added parameter count and epoch timer functions to all notebooks. also added cnn1d imlementation to notebook 4

--- a/1 - Simple Sentiment Analysis.ipynb
+++ b/1 - Simple Sentiment Analysis.ipynb
@@ -310,7 +310,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "defaultdict(<function _default_unk_index at 0x7f28a1bbfe18>, {'neg': 0, 'pos': 1})\n"
+      "defaultdict(<function _default_unk_index at 0x7f4234385bf8>, {'neg': 0, 'pos': 1})\n"
      ]
     }
    ],
@@ -447,6 +447,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Let's also create a function that will tell us how many trainable parameters our model has so we can compare the number of parameters across different models."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The model has 2,592,105 trainable parameters\n"
+     ]
+    }
+   ],
+   "source": [
+    "def count_parameters(model):\n",
+    "    return sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
+    "\n",
+    "print(f'The model has {count_parameters(model):,} trainable parameters')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Train the Model"
    ]
   },
@@ -461,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,35 +669,83 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We then train the model through multiple epochs, an epoch being a complete pass through all examples in the split."
+    "We'll also create a function to tell us how long an epoch takes to compare training times between models."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "def epoch_time(start_time, end_time):\n",
+    "    elapsed_time = end_time - start_time\n",
+    "    elapsed_mins = int(elapsed_time / 60)\n",
+    "    elapsed_secs = int(elapsed_time - (elapsed_mins * 60))\n",
+    "    return elapsed_mins, elapsed_secs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We then train the model through multiple epochs, an epoch being a complete pass through all examples in the training and validation sets.\n",
+    "\n",
+    "At each epoch, if the validation loss is the best we have seen so far, we'll save the parameters of the model and then after training has finished we'll use that model on the test set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| Epoch: 01 | Train Loss: 0.694 | Train Acc: 50.12% | Val. Loss: 0.696 | Val. Acc: 50.17% |\n",
-      "| Epoch: 02 | Train Loss: 0.693 | Train Acc: 49.73% | Val. Loss: 0.696 | Val. Acc: 51.01% |\n",
-      "| Epoch: 03 | Train Loss: 0.693 | Train Acc: 50.22% | Val. Loss: 0.696 | Val. Acc: 50.87% |\n",
-      "| Epoch: 04 | Train Loss: 0.693 | Train Acc: 49.94% | Val. Loss: 0.696 | Val. Acc: 49.91% |\n",
-      "| Epoch: 05 | Train Loss: 0.693 | Train Acc: 50.07% | Val. Loss: 0.696 | Val. Acc: 51.00% |\n"
+      "Epoch: 01 | Epoch Time: 0m 18s\n",
+      "\tTrain Loss: 0.694 | Train Acc: 50.12%\n",
+      "\t Val. Loss: 0.696 |  Val. Acc: 50.17%\n",
+      "Epoch: 02 | Epoch Time: 0m 17s\n",
+      "\tTrain Loss: 0.693 | Train Acc: 49.73%\n",
+      "\t Val. Loss: 0.696 |  Val. Acc: 51.01%\n",
+      "Epoch: 03 | Epoch Time: 0m 17s\n",
+      "\tTrain Loss: 0.693 | Train Acc: 50.22%\n",
+      "\t Val. Loss: 0.696 |  Val. Acc: 50.87%\n",
+      "Epoch: 04 | Epoch Time: 0m 18s\n",
+      "\tTrain Loss: 0.693 | Train Acc: 49.94%\n",
+      "\t Val. Loss: 0.696 |  Val. Acc: 49.91%\n",
+      "Epoch: 05 | Epoch Time: 0m 18s\n",
+      "\tTrain Loss: 0.693 | Train Acc: 50.07%\n",
+      "\t Val. Loss: 0.696 |  Val. Acc: 51.00%\n"
      ]
     }
    ],
    "source": [
     "N_EPOCHS = 5\n",
     "\n",
+    "best_valid_loss = float('inf')\n",
+    "\n",
     "for epoch in range(N_EPOCHS):\n",
     "\n",
+    "    start_time = time.time()\n",
+    "    \n",
     "    train_loss, train_acc = train(model, train_iterator, optimizer, criterion)\n",
     "    valid_loss, valid_acc = evaluate(model, valid_iterator, criterion)\n",
     "    \n",
-    "    print(f'| Epoch: {epoch+1:02} | Train Loss: {train_loss:.3f} | Train Acc: {train_acc*100:.2f}% | Val. Loss: {valid_loss:.3f} | Val. Acc: {valid_acc*100:.2f}% |')"
+    "    end_time = time.time()\n",
+    "\n",
+    "    epoch_mins, epoch_secs = epoch_time(start_time, end_time)\n",
+    "    \n",
+    "    if valid_loss < best_valid_loss:\n",
+    "        best_valid_loss = valid_loss\n",
+    "        torch.save(model.state_dict(), 'tut1-model.pt')\n",
+    "    \n",
+    "    print(f'Epoch: {epoch+1:02} | Epoch Time: {epoch_mins}m {epoch_secs}s')\n",
+    "    print(f'\\tTrain Loss: {train_loss:.3f} | Train Acc: {train_acc*100:.2f}%')\n",
+    "    print(f'\\t Val. Loss: {valid_loss:.3f} |  Val. Acc: {valid_acc*100:.2f}%')"
    ]
   },
   {
@@ -679,26 +754,28 @@
    "source": [
     "You may have noticed the loss is not really decreasing and the accuracy is poor. This is due to several issues with the model which we'll improve in the next notebook.\n",
     "\n",
-    "Finally, the metric we actually care about, the test loss and accuracy."
+    "Finally, the metric we actually care about, the test loss and accuracy, which we get from our parameters that gave us the best validation loss."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| Test Loss: 0.710 | Test Acc: 47.67% |\n"
+      "Test Loss: 0.708 | Test Acc: 47.87%\n"
      ]
     }
    ],
    "source": [
+    "model.load_state_dict(torch.load('tut1-model.pt'))\n",
+    "\n",
     "test_loss, test_acc = evaluate(model, test_iterator, criterion)\n",
     "\n",
-    "print(f'| Test Loss: {test_loss:.3f} | Test Acc: {test_acc*100:.2f}% |')"
+    "print(f'Test Loss: {test_loss:.3f} | Test Acc: {test_acc*100:.2f}%')"
    ]
   },
   {
