--- a/2 - Upgraded Sentiment Analysis.ipynb
+++ b/2 - Upgraded Sentiment Analysis.ipynb
@@ -234,6 +234,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We'll print out the number of parameters in our model. \n",
+    "\n",
+    "Notice how we have almost twice as many parameters as before!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The model has 4,810,857 trainable parameters\n"
+     ]
+    }
+   ],
+   "source": [
+    "def count_parameters(model):\n",
+    "    return sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
+    "\n",
+    "print(f'The model has {count_parameters(model):,} trainable parameters')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The final addition is copying the pre-trained word embeddings we loaded earlier into the `embedding` layer of our model.\n",
     "\n",
     "We retrieve the embeddings from the field's vocab, and check they're the correct size, _**[vocab size, embedding dim]**_ "
@@ -241,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +311,7 @@
        "        [-0.1182, -0.4701, -0.0600,  ...,  0.7991, -0.0194,  0.4785]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,35 +479,81 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, we train our model..."
+    "And also create a nice function to tell us how long our epochs are taking."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "def epoch_time(start_time, end_time):\n",
+    "    elapsed_time = end_time - start_time\n",
+    "    elapsed_mins = int(elapsed_time / 60)\n",
+    "    elapsed_secs = int(elapsed_time - (elapsed_mins * 60))\n",
+    "    return elapsed_mins, elapsed_secs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, we train our model, noticing how it now takes ~1min 45sec per epoch instead of 18 seconds... all of those extra parameters don't come for free!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| Epoch: 01 | Train Loss: 0.669 | Train Acc: 58.61% | Val. Loss: 0.590 | Val. Acc: 70.80% |\n",
-      "| Epoch: 02 | Train Loss: 0.690 | Train Acc: 52.30% | Val. Loss: 0.691 | Val. Acc: 53.49% |\n",
-      "| Epoch: 03 | Train Loss: 0.682 | Train Acc: 55.89% | Val. Loss: 0.656 | Val. Acc: 62.46% |\n",
-      "| Epoch: 04 | Train Loss: 0.586 | Train Acc: 69.11% | Val. Loss: 0.419 | Val. Acc: 81.29% |\n",
-      "| Epoch: 05 | Train Loss: 0.365 | Train Acc: 84.93% | Val. Loss: 0.322 | Val. Acc: 86.78% |\n"
+      "Epoch: 01 | Epoch Time: 1m 42s\n",
+      "\tTrain Loss: 0.669 | Train Acc: 58.61%\n",
+      "\t Val. Loss: 0.590 |  Val. Acc: 70.80%\n",
+      "Epoch: 02 | Epoch Time: 1m 43s\n",
+      "\tTrain Loss: 0.690 | Train Acc: 52.30%\n",
+      "\t Val. Loss: 0.691 |  Val. Acc: 53.49%\n",
+      "Epoch: 03 | Epoch Time: 1m 44s\n",
+      "\tTrain Loss: 0.682 | Train Acc: 55.89%\n",
+      "\t Val. Loss: 0.656 |  Val. Acc: 62.46%\n",
+      "Epoch: 04 | Epoch Time: 1m 44s\n",
+      "\tTrain Loss: 0.586 | Train Acc: 69.11%\n",
+      "\t Val. Loss: 0.419 |  Val. Acc: 81.29%\n",
+      "Epoch: 05 | Epoch Time: 1m 44s\n",
+      "\tTrain Loss: 0.365 | Train Acc: 84.93%\n",
+      "\t Val. Loss: 0.322 |  Val. Acc: 86.78%\n"
      ]
     }
    ],
    "source": [
     "N_EPOCHS = 5\n",
     "\n",
+    "best_valid_loss = float('inf')\n",
+    "\n",
     "for epoch in range(N_EPOCHS):\n",
     "\n",
+    "    start_time = time.time()\n",
+    "    \n",
     "    train_loss, train_acc = train(model, train_iterator, optimizer, criterion)\n",
     "    valid_loss, valid_acc = evaluate(model, valid_iterator, criterion)\n",
     "    \n",
-    "    print(f'| Epoch: {epoch+1:02} | Train Loss: {train_loss:.3f} | Train Acc: {train_acc*100:.2f}% | Val. Loss: {valid_loss:.3f} | Val. Acc: {valid_acc*100:.2f}% |')"
+    "    end_time = time.time()\n",
+    "\n",
+    "    epoch_mins, epoch_secs = epoch_time(start_time, end_time)\n",
+    "    \n",
+    "    if valid_loss < best_valid_loss:\n",
+    "        best_valid_loss = valid_loss\n",
+    "        torch.save(model.state_dict(), 'tut2-model.pt')\n",
+    "    \n",
+    "    print(f'Epoch: {epoch+1:02} | Epoch Time: {epoch_mins}m {epoch_secs}s')\n",
+    "    print(f'\\tTrain Loss: {train_loss:.3f} | Train Acc: {train_acc*100:.2f}%')\n",
+    "    print(f'\\t Val. Loss: {valid_loss:.3f} |  Val. Acc: {valid_acc*100:.2f}%')"
    ]
   },
   {
@@ -490,21 +565,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| Test Loss: 0.327 | Test Acc: 86.65% |\n"
+      "Test Loss: 0.327 | Test Acc: 86.65%\n"
      ]
     }
    ],
    "source": [
+    "model.load_state_dict(torch.load('tut2-model.pt'))\n",
+    "\n",
     "test_loss, test_acc = evaluate(model, test_iterator, criterion)\n",
     "\n",
-    "print(f'| Test Loss: {test_loss:.3f} | Test Acc: {test_acc*100:.2f}% |')"
+    "print(f'Test Loss: {test_loss:.3f} | Test Acc: {test_acc*100:.2f}%')"
    ]
   },
   {
@@ -528,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +639,7 @@
        "0.026062507182359695"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +666,7 @@
        "0.9745494723320007"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
