--- a/3 - Faster Sentiment Analysis.ipynb
+++ b/3 - Faster Sentiment Analysis.ipynb
@@ -50,7 +50,7 @@
     {
      "data": {
       "text/plain": [
-       "['This', 'film', 'is', 'terrible', 'is terrible', 'This film', 'film is']"
+       "['This', 'film', 'is', 'terrible', 'This film', 'is terrible', 'film is']"
       ]
      },
      "execution_count": 2,
@@ -235,12 +235,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And copy the pre-trained vectors to our embedding layer."
+    "Looking at the number of parameters in our model, we see we have about the same as the standard RNN from the first notebook and half the parameters of the previous model."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The model has 2,500,301 trainable parameters\n"
+     ]
+    }
+   ],
+   "source": [
+    "def count_parameters(model):\n",
+    "    return sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
+    "\n",
+    "print(f'The model has {count_parameters(model):,} trainable parameters')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And copy the pre-trained vectors to our embedding layer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +282,7 @@
        "        [-0.1734, -0.3195,  0.3694,  ..., -0.2435,  0.4767,  0.1151]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,35 +448,98 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, we train our model..."
+    "As before, we'll implement a useful function to tell us how long an epoch takes."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "def epoch_time(start_time, end_time):\n",
+    "    elapsed_time = end_time - start_time\n",
+    "    elapsed_mins = int(elapsed_time / 60)\n",
+    "    elapsed_secs = int(elapsed_time - (elapsed_mins * 60))\n",
+    "    return elapsed_mins, elapsed_secs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, we train our model. \n",
+    "\n",
+    "This model takes more epochs than the previous model, but the epochs take considerably less time (~20s compared to ~1min 45s), so our overall training time is still shorter."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| Epoch: 01 | Train Loss: 0.692 | Train Acc: 52.00% | Val. Loss: 0.674 | Val. Acc: 62.54% |\n",
-      "| Epoch: 02 | Train Loss: 0.684 | Train Acc: 57.78% | Val. Loss: 0.646 | Val. Acc: 68.23% |\n",
-      "| Epoch: 03 | Train Loss: 0.672 | Train Acc: 64.40% | Val. Loss: 0.599 | Val. Acc: 71.41% |\n",
-      "| Epoch: 04 | Train Loss: 0.650 | Train Acc: 70.25% | Val. Loss: 0.543 | Val. Acc: 74.33% |\n",
-      "| Epoch: 05 | Train Loss: 0.620 | Train Acc: 75.06% | Val. Loss: 0.496 | Val. Acc: 76.62% |\n"
+      "Epoch: 01 | Epoch Time: 0m 21s\n",
+      "\tTrain Loss: 0.692 | Train Acc: 52.00%\n",
+      "\t Val. Loss: 0.674 |  Val. Acc: 62.54%\n",
+      "Epoch: 02 | Epoch Time: 0m 22s\n",
+      "\tTrain Loss: 0.684 | Train Acc: 57.78%\n",
+      "\t Val. Loss: 0.646 |  Val. Acc: 68.23%\n",
+      "Epoch: 03 | Epoch Time: 0m 22s\n",
+      "\tTrain Loss: 0.672 | Train Acc: 64.40%\n",
+      "\t Val. Loss: 0.599 |  Val. Acc: 71.41%\n",
+      "Epoch: 04 | Epoch Time: 0m 22s\n",
+      "\tTrain Loss: 0.650 | Train Acc: 70.25%\n",
+      "\t Val. Loss: 0.543 |  Val. Acc: 74.33%\n",
+      "Epoch: 05 | Epoch Time: 0m 22s\n",
+      "\tTrain Loss: 0.620 | Train Acc: 75.06%\n",
+      "\t Val. Loss: 0.496 |  Val. Acc: 76.62%\n",
+      "Epoch: 06 | Epoch Time: 0m 22s\n",
+      "\tTrain Loss: 0.583 | Train Acc: 77.97%\n",
+      "\t Val. Loss: 0.460 |  Val. Acc: 78.66%\n",
+      "Epoch: 07 | Epoch Time: 0m 22s\n",
+      "\tTrain Loss: 0.546 | Train Acc: 81.23%\n",
+      "\t Val. Loss: 0.444 |  Val. Acc: 80.17%\n",
+      "Epoch: 08 | Epoch Time: 0m 21s\n",
+      "\tTrain Loss: 0.507 | Train Acc: 82.98%\n",
+      "\t Val. Loss: 0.418 |  Val. Acc: 82.00%\n",
+      "Epoch: 09 | Epoch Time: 0m 21s\n",
+      "\tTrain Loss: 0.473 | Train Acc: 84.47%\n",
+      "\t Val. Loss: 0.407 |  Val. Acc: 83.38%\n",
+      "Epoch: 10 | Epoch Time: 0m 22s\n",
+      "\tTrain Loss: 0.441 | Train Acc: 86.19%\n",
+      "\t Val. Loss: 0.399 |  Val. Acc: 84.43%\n"
      ]
     }
    ],
    "source": [
-    "N_EPOCHS = 5\n",
+    "N_EPOCHS = 10\n",
+    "\n",
+    "best_valid_loss = float('inf')\n",
     "\n",
     "for epoch in range(N_EPOCHS):\n",
     "\n",
+    "    start_time = time.time()\n",
+    "    \n",
     "    train_loss, train_acc = train(model, train_iterator, optimizer, criterion)\n",
     "    valid_loss, valid_acc = evaluate(model, valid_iterator, criterion)\n",
     "    \n",
-    "    print(f'| Epoch: {epoch+1:02} | Train Loss: {train_loss:.3f} | Train Acc: {train_acc*100:.2f}% | Val. Loss: {valid_loss:.3f} | Val. Acc: {valid_acc*100:.2f}% |')"
+    "    end_time = time.time()\n",
+    "\n",
+    "    epoch_mins, epoch_secs = epoch_time(start_time, end_time)\n",
+    "    \n",
+    "    if valid_loss < best_valid_loss:\n",
+    "        best_valid_loss = valid_loss\n",
+    "        torch.save(model.state_dict(), 'tut3-model.pt')\n",
+    "    \n",
+    "    print(f'Epoch: {epoch+1:02} | Epoch Time: {epoch_mins}m {epoch_secs}s')\n",
+    "    print(f'\\tTrain Loss: {train_loss:.3f} | Train Acc: {train_acc*100:.2f}%')\n",
+    "    print(f'\\t Val. Loss: {valid_loss:.3f} |  Val. Acc: {valid_acc*100:.2f}%')"
    ]
   },
   {
@@ -458,26 +548,28 @@
    "source": [
     "...and get the test accuracy!\n",
     "\n",
-    "The results are comparable to the results in the last notebook, but training takes considerably less time."
+    "The results are comparable to the results in the last notebook, but training takes considerably less time (~3mins for 10 epochs compared to ~9mins for 5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| Test Loss: 0.496 | Test Acc: 76.19% |\n"
+      "Test Loss: 0.395 | Test Acc: 84.39%\n"
      ]
     }
    ],
    "source": [
+    "model.load_state_dict(torch.load('tut3-model.pt'))\n",
+    "\n",
     "test_loss, test_acc = evaluate(model, test_iterator, criterion)\n",
     "\n",
-    "print(f'| Test Loss: {test_loss:.3f} | Test Acc: {test_acc*100:.2f}% |')"
+    "print(f'Test Loss: {test_loss:.3f} | Test Acc: {test_acc*100:.2f}%')"
    ]
   },
   {
@@ -491,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,16 +608,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.03882138803601265"
+       "2.3133496540594933e-07"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,16 +635,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9998927116394043"
+       "1.0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +659,7 @@
    "source": [
     "## Next Steps\n",
     "\n",
-    "In the next notebook we'll use convolutional neural networks (CNNs) to perform sentiment analysis, and get our best accuracy yet!"
+    "In the next notebook we'll use convolutional neural networks (CNNs) to perform sentiment analysis."
    ]
   }
  ],
