--- a/4 - Convolutional Sentiment Analysis.ipynb
+++ b/4 - Convolutional Sentiment Analysis.ipynb
@@ -267,12 +267,73 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We create an instance of our `CNN` class."
+    "We can also implement the above model using 1-dimensional convolutional layers, where the embedding dimension is the \"depth\" of the filter and the number of tokens in the sentence is the width.\n",
+    "\n",
+    "We'll run our tests in this notebook using the 2-dimensional convolutional model, but leave the implementation for the 1-dimensional model below for anyone interested. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CNN1d(nn.Module):\n",
+    "    def __init__(self, vocab_size, embedding_dim, n_filters, filter_sizes, output_dim, dropout):\n",
+    "        super().__init__()\n",
+    "        \n",
+    "        self.embedding = nn.Embedding(vocab_size, embedding_dim)\n",
+    "        self.convs = nn.ModuleList([\n",
+    "                                    nn.Conv1d(in_channels = embedding_dim, out_channels = n_filters, \n",
+    "                                              kernel_size = fs)\n",
+    "                                    for fs in filter_sizes\n",
+    "                                    ])\n",
+    "        self.fc = nn.Linear(len(filter_sizes) * n_filters, output_dim)\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "        \n",
+    "    def forward(self, text):\n",
+    "        \n",
+    "        #text = [sent len, batch size]\n",
+    "        \n",
+    "        text = text.permute(1, 0)\n",
+    "        \n",
+    "        #text = [batch size, sent len]\n",
+    "        \n",
+    "        embedded = self.embedding(text)\n",
+    "                \n",
+    "        #embedded = [batch size, sent len, emb dim]\n",
+    "        \n",
+    "        embedded = embedded.permute(0, 2, 1)\n",
+    "        \n",
+    "        #embedded = [batch size, emb dim, sent len]\n",
+    "        \n",
+    "        conved = [F.relu(conv(embedded)) for conv in self.convs]\n",
+    "            \n",
+    "        #conv_n = [batch size, n_filters, sent len - filter_sizes[n] - 1]\n",
+    "        \n",
+    "        pooled = [F.max_pool1d(conv, conv.shape[2]).squeeze(2) for conv in conved]\n",
+    "        \n",
+    "        #pooled_n = [batch size, n_filters]\n",
+    "        \n",
+    "        cat = self.dropout(torch.cat(pooled, dim=1))\n",
+    "        \n",
+    "        #cat = [batch size, n_filters * len(filter_sizes)]\n",
+    "            \n",
+    "        return self.fc(cat)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We create an instance of our `CNN` class. \n",
+    "\n",
+    "We can change `CNN` to `CNN1d` if we want to run the 1-dimensional convolutional model, noting that both models give almost identical results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,12 +351,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Checking the number of parameters in our model we can see it has about the same as the FastText model. \n",
+    "\n",
+    "Both the `CNN` and the `CNN1d` models have the exact same number of parameters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The model has 2,620,801 trainable parameters\n"
+     ]
+    }
+   ],
+   "source": [
+    "def count_parameters(model):\n",
+    "    return sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
+    "\n",
+    "print(f'The model has {count_parameters(model):,} trainable parameters')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "And load the pre-trained embeddings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +400,7 @@
        "        [-0.1182, -0.4701, -0.0600,  ...,  0.7991, -0.0194,  0.4785]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,12 +550,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Let's define our function to tell us how long epochs take."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "def epoch_time(start_time, end_time):\n",
+    "    elapsed_time = end_time - start_time\n",
+    "    elapsed_mins = int(elapsed_time / 60)\n",
+    "    elapsed_secs = int(elapsed_time - (elapsed_mins * 60))\n",
+    "    return elapsed_mins, elapsed_secs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Finally, we train our model..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -474,49 +586,75 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| Epoch: 01 | Train Loss: 0.655 | Train Acc: 61.23% | Val. Loss: 0.507 | Val. Acc: 78.22% |\n",
-      "| Epoch: 02 | Train Loss: 0.427 | Train Acc: 80.56% | Val. Loss: 0.363 | Val. Acc: 84.41% |\n",
-      "| Epoch: 03 | Train Loss: 0.304 | Train Acc: 87.10% | Val. Loss: 0.351 | Val. Acc: 84.55% |\n",
-      "| Epoch: 04 | Train Loss: 0.219 | Train Acc: 91.28% | Val. Loss: 0.317 | Val. Acc: 86.89% |\n",
-      "| Epoch: 05 | Train Loss: 0.157 | Train Acc: 94.20% | Val. Loss: 0.339 | Val. Acc: 86.80% |\n"
+      "Epoch: 01 | Epoch Time: 0m 20s\n",
+      "\tTrain Loss: 0.655 | Train Acc: 61.23%\n",
+      "\t Val. Loss: 0.507 |  Val. Acc: 78.22%\n",
+      "Epoch: 02 | Epoch Time: 0m 20s\n",
+      "\tTrain Loss: 0.427 | Train Acc: 80.56%\n",
+      "\t Val. Loss: 0.363 |  Val. Acc: 84.41%\n",
+      "Epoch: 03 | Epoch Time: 0m 20s\n",
+      "\tTrain Loss: 0.304 | Train Acc: 87.10%\n",
+      "\t Val. Loss: 0.351 |  Val. Acc: 84.55%\n",
+      "Epoch: 04 | Epoch Time: 0m 20s\n",
+      "\tTrain Loss: 0.219 | Train Acc: 91.28%\n",
+      "\t Val. Loss: 0.317 |  Val. Acc: 86.89%\n",
+      "Epoch: 05 | Epoch Time: 0m 20s\n",
+      "\tTrain Loss: 0.157 | Train Acc: 94.20%\n",
+      "\t Val. Loss: 0.339 |  Val. Acc: 86.80%\n"
      ]
     }
    ],
    "source": [
     "N_EPOCHS = 5\n",
     "\n",
+    "best_valid_loss = float('inf')\n",
+    "\n",
     "for epoch in range(N_EPOCHS):\n",
     "\n",
+    "    start_time = time.time()\n",
+    "    \n",
     "    train_loss, train_acc = train(model, train_iterator, optimizer, criterion)\n",
     "    valid_loss, valid_acc = evaluate(model, valid_iterator, criterion)\n",
     "    \n",
-    "    print(f'| Epoch: {epoch+1:02} | Train Loss: {train_loss:.3f} | Train Acc: {train_acc*100:.2f}% | Val. Loss: {valid_loss:.3f} | Val. Acc: {valid_acc*100:.2f}% |')"
+    "    end_time = time.time()\n",
+    "\n",
+    "    epoch_mins, epoch_secs = epoch_time(start_time, end_time)\n",
+    "    \n",
+    "    if valid_loss < best_valid_loss:\n",
+    "        best_valid_loss = valid_loss\n",
+    "        torch.save(model.state_dict(), 'tut4-model.pt')\n",
+    "    \n",
+    "    print(f'Epoch: {epoch+1:02} | Epoch Time: {epoch_mins}m {epoch_secs}s')\n",
+    "    print(f'\\tTrain Loss: {train_loss:.3f} | Train Acc: {train_acc*100:.2f}%')\n",
+    "    print(f'\\t Val. Loss: {valid_loss:.3f} |  Val. Acc: {valid_acc*100:.2f}%')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "...and get our best test accuracy yet! "
+    "We get test results comparable to the previous 2 models, with the shortest training time yet!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| Test Loss: 0.365 | Test Acc: 85.13% |\n"
+      "Test Loss: 0.338 | Test Acc: 85.35%\n"
      ]
     }
    ],
    "source": [
+    "model.load_state_dict(torch.load('tut4-model.pt'))\n",
+    "\n",
     "test_loss, test_acc = evaluate(model, test_iterator, criterion)\n",
     "\n",
-    "print(f'| Test Loss: {test_loss:.3f} | Test Acc: {test_acc*100:.2f}% |')"
+    "print(f'Test Loss: {test_loss:.3f} | Test Acc: {test_acc*100:.2f}%')"
    ]
   },
   {
@@ -532,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,16 +697,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.09634540975093842"
+       "0.1491514891386032"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,16 +724,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9790706634521484"
+       "0.9708710312843323"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
