--- a/5 - Multi-class Sentiment Analysis.ipynb
+++ b/5 - Multi-class Sentiment Analysis.ipynb
@@ -110,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "defaultdict(<function _default_unk_index at 0x7f13f9713bf8>, {'HUM': 0, 'ENTY': 1, 'DESC': 2, 'NUM': 3, 'LOC': 4, 'ABBR': 5})\n"
+      "defaultdict(<function _default_unk_index at 0x7fc5dba26bf8>, {'HUM': 0, 'ENTY': 1, 'DESC': 2, 'NUM': 3, 'LOC': 4, 'ABBR': 5})\n"
      ]
     }
    ],
@@ -205,7 +205,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We define our model, making sure to set `OUTPUT_DIM` to $C$. We can get $C$ easily by using the size of the `LABEL` vocab, much like we used the length of the `TEXT` vocab to get the size of the vocabulary of the input."
+    "We define our model, making sure to set `OUTPUT_DIM` to $C$. We can get $C$ easily by using the size of the `LABEL` vocab, much like we used the length of the `TEXT` vocab to get the size of the vocabulary of the input.\n",
+    "\n",
+    "The examples in this dataset are generally a lot smaller than those in the IMDb dataset, so we'll use smaller filter sizes."
    ]
   },
   {
@@ -228,12 +230,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we'll load our pre-trained embeddings."
+    "Checking the number of parameters, we can see how the smaller filter sizes means we have about a third of the parameters than we did for the CNN model on the IMDb dataset."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The model has 842,406 trainable parameters\n"
+     ]
+    }
+   ],
+   "source": [
+    "def count_parameters(model):\n",
+    "    return sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
+    "\n",
+    "print(f'The model has {count_parameters(model):,} trainable parameters')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we'll load our pre-trained embeddings."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +277,7 @@
        "        [ 0.4306,  1.2011,  0.0873,  ...,  0.8817,  0.3722,  0.3458]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,6 +420,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "def epoch_time(start_time, end_time):\n",
+    "    elapsed_time = end_time - start_time\n",
+    "    elapsed_mins = int(elapsed_time / 60)\n",
+    "    elapsed_secs = int(elapsed_time - (elapsed_mins * 60))\n",
+    "    return elapsed_mins, elapsed_secs"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -399,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -408,49 +452,75 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| Epoch: 01 | Train Loss: 1.339 | Train Acc: 46.20% | Val. Loss: 0.999 | Val. Acc: 65.65% |\n",
-      "| Epoch: 02 | Train Loss: 0.882 | Train Acc: 68.22% | Val. Loss: 0.805 | Val. Acc: 72.43% |\n",
-      "| Epoch: 03 | Train Loss: 0.673 | Train Acc: 77.13% | Val. Loss: 0.713 | Val. Acc: 74.02% |\n",
-      "| Epoch: 04 | Train Loss: 0.515 | Train Acc: 83.03% | Val. Loss: 0.630 | Val. Acc: 77.01% |\n",
-      "| Epoch: 05 | Train Loss: 0.387 | Train Acc: 87.70% | Val. Loss: 0.624 | Val. Acc: 76.54% |\n"
+      "Epoch: 01 | Epoch Time: 0m 0s\n",
+      "\tTrain Loss: 1.339 | Train Acc: 46.20%\n",
+      "\t Val. Loss: 0.999 |  Val. Acc: 65.65%\n",
+      "Epoch: 02 | Epoch Time: 0m 0s\n",
+      "\tTrain Loss: 0.882 | Train Acc: 68.22%\n",
+      "\t Val. Loss: 0.805 |  Val. Acc: 72.43%\n",
+      "Epoch: 03 | Epoch Time: 0m 0s\n",
+      "\tTrain Loss: 0.673 | Train Acc: 77.13%\n",
+      "\t Val. Loss: 0.713 |  Val. Acc: 74.02%\n",
+      "Epoch: 04 | Epoch Time: 0m 0s\n",
+      "\tTrain Loss: 0.515 | Train Acc: 83.03%\n",
+      "\t Val. Loss: 0.630 |  Val. Acc: 77.01%\n",
+      "Epoch: 05 | Epoch Time: 0m 0s\n",
+      "\tTrain Loss: 0.387 | Train Acc: 87.70%\n",
+      "\t Val. Loss: 0.624 |  Val. Acc: 76.54%\n"
      ]
     }
    ],
    "source": [
     "N_EPOCHS = 5\n",
     "\n",
+    "best_valid_loss = float('inf')\n",
+    "\n",
     "for epoch in range(N_EPOCHS):\n",
     "\n",
+    "    start_time = time.time()\n",
+    "    \n",
     "    train_loss, train_acc = train(model, train_iterator, optimizer, criterion)\n",
     "    valid_loss, valid_acc = evaluate(model, valid_iterator, criterion)\n",
     "    \n",
-    "    print(f'| Epoch: {epoch+1:02} | Train Loss: {train_loss:.3f} | Train Acc: {train_acc*100:.2f}% | Val. Loss: {valid_loss:.3f} | Val. Acc: {valid_acc*100:.2f}% |')"
+    "    end_time = time.time()\n",
+    "\n",
+    "    epoch_mins, epoch_secs = epoch_time(start_time, end_time)\n",
+    "    \n",
+    "    if valid_loss < best_valid_loss:\n",
+    "        best_valid_loss = valid_loss\n",
+    "        torch.save(model.state_dict(), 'tut5-model.pt')\n",
+    "    \n",
+    "    print(f'Epoch: {epoch+1:02} | Epoch Time: {epoch_mins}m {epoch_secs}s')\n",
+    "    print(f'\\tTrain Loss: {train_loss:.3f} | Train Acc: {train_acc*100:.2f}%')\n",
+    "    print(f'\\t Val. Loss: {valid_loss:.3f} |  Val. Acc: {valid_acc*100:.2f}%')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For the non-fine-grained case, we should get an accuracy of around 90%. For the fine-grained case, we should get around 70%."
+    "Finally, let's run our model on the test set!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| Test Loss: 0.514 | Test Acc: 85.79% |\n"
+      "Test Loss: 0.514 | Test Acc: 85.79%\n"
      ]
     }
    ],
    "source": [
+    "model.load_state_dict(torch.load('tut5-model.pt'))\n",
+    "\n",
     "test_loss, test_acc = evaluate(model, test_iterator, criterion)\n",
     "\n",
-    "print(f'| Test Loss: {test_loss:.3f} | Test Acc: {test_acc*100:.2f}% |')"
+    "print(f'Test Loss: {test_loss:.3f} | Test Acc: {test_acc*100:.2f}%')"
    ]
   },
   {
@@ -464,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
