--- a/A - Using TorchText with Your Own Datasets.ipynb
+++ b/A - Using TorchText with Your Own Datasets.ipynb
@@ -13,24 +13,16 @@
     "- loaded the dataset\n",
     "- created the splits\n",
     "\n",
-    "As a reminder, the code is shown below:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from torchtext import data\n",
-    "from torchtext import datasets\n",
+    "As a reminder, the code is shown below:\n",
     "\n",
+    "```python\n",
     "TEXT = data.Field()\n",
     "LABEL = data.LabelField()\n",
     "\n",
     "train_data, test_data = datasets.IMDB.splits(TEXT, LABEL)\n",
     "\n",
-    "train_data, valid_data = train_data.split()"
+    "train_data, valid_data = train_data.split()\n",
+    "```"
    ]
   },
   {
@@ -57,10 +49,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from torchtext import data\n",
+    "from torchtext import datasets\n",
+    "\n",
     "NAME = data.Field()\n",
     "SAYING = data.Field()\n",
     "PLACE = data.Field()"
@@ -97,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -319,6 +314,116 @@
     "\n",
     "2. If tabs appear in your `tsv` data, or commas appear in your `csv` data, TorchText will think they are delimiters between columns. This will cause your data to be parsed incorrectly. Worst of all TorchText will not alert you to this as it cannot tell the difference between a tab/comma in a field and a tab/comma as a delimiter. As `json` data is essentially a dictionary, you access the data within the fields via its key, so do not have to worry about \"surprise\" delimiters."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Iterators \n",
+    "\n",
+    "Using any of the above datasets, we can then build the vocab and create the iterators."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NAME.build_vocab(train_data)\n",
+    "SAYING.build_vocab(train_data)\n",
+    "PLACE.build_vocab(train_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then, we can create the iterators after defining our batch size and device.\n",
+    "\n",
+    "By default, the train data is shuffled each epoch, but the validation/test data is sorted. However, TorchText doesn't know what to use to sort our data and it would throw an error if we don't tell it. \n",
+    "\n",
+    "There are two ways to handle this, you can either tell the iterator not to sort the validation/test data by passing `sort = False`, or you can tell it how to sort the data by passing a `sort_key`. A sort key is a function that returns a key on which to sort the data on. For example, `lambda x: x.s` will sort the examples by their `s` attribute, i.e their quote.\n",
+    "\n",
+    "We can then iterate over our iterator to get batches of data. Note how by default TorchText has the batch dimension second."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train:\n",
+      "\n",
+      "[torchtext.data.batch.Batch of size 1]\n",
+      "\t[.n]:[torch.cuda.LongTensor of size 1x1 (GPU 0)]\n",
+      "\t[.p]:[torch.cuda.LongTensor of size 2x1 (GPU 0)]\n",
+      "\t[.s]:[torch.cuda.LongTensor of size 4x1 (GPU 0)]\n",
+      "\n",
+      "[torchtext.data.batch.Batch of size 1]\n",
+      "\t[.n]:[torch.cuda.LongTensor of size 1x1 (GPU 0)]\n",
+      "\t[.p]:[torch.cuda.LongTensor of size 2x1 (GPU 0)]\n",
+      "\t[.s]:[torch.cuda.LongTensor of size 5x1 (GPU 0)]\n",
+      "Valid:\n",
+      "\n",
+      "[torchtext.data.batch.Batch of size 1]\n",
+      "\t[.n]:[torch.cuda.LongTensor of size 1x1 (GPU 0)]\n",
+      "\t[.p]:[torch.cuda.LongTensor of size 1x1 (GPU 0)]\n",
+      "\t[.s]:[torch.cuda.LongTensor of size 2x1 (GPU 0)]\n",
+      "\n",
+      "[torchtext.data.batch.Batch of size 1]\n",
+      "\t[.n]:[torch.cuda.LongTensor of size 1x1 (GPU 0)]\n",
+      "\t[.p]:[torch.cuda.LongTensor of size 1x1 (GPU 0)]\n",
+      "\t[.s]:[torch.cuda.LongTensor of size 4x1 (GPU 0)]\n",
+      "Test:\n",
+      "\n",
+      "[torchtext.data.batch.Batch of size 1]\n",
+      "\t[.n]:[torch.cuda.LongTensor of size 1x1 (GPU 0)]\n",
+      "\t[.p]:[torch.cuda.LongTensor of size 1x1 (GPU 0)]\n",
+      "\t[.s]:[torch.cuda.LongTensor of size 3x1 (GPU 0)]\n",
+      "\n",
+      "[torchtext.data.batch.Batch of size 1]\n",
+      "\t[.n]:[torch.cuda.LongTensor of size 1x1 (GPU 0)]\n",
+      "\t[.p]:[torch.cuda.LongTensor of size 2x1 (GPU 0)]\n",
+      "\t[.s]:[torch.cuda.LongTensor of size 3x1 (GPU 0)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "\n",
+    "BATCH_SIZE = 1\n",
+    "\n",
+    "train_iterator, valid_iterator, test_iterator = data.BucketIterator.splits(\n",
+    "    (train_data, valid_data, test_data),\n",
+    "    sort = False, #don't sort test/validation data\n",
+    "    batch_size=BATCH_SIZE,\n",
+    "    device=device)\n",
+    "\n",
+    "train_iterator, valid_iterator, test_iterator = data.BucketIterator.splits(\n",
+    "    (train_data, valid_data, test_data),\n",
+    "    sort_key = lambda x: x.s, #sort by s attribute (quote)\n",
+    "    batch_size=BATCH_SIZE,\n",
+    "    device=device)\n",
+    "\n",
+    "print('Train:')\n",
+    "for batch in train_iterator:\n",
+    "    print(batch)\n",
+    "    \n",
+    "print('Valid:')\n",
+    "for batch in valid_iterator:\n",
+    "    print(batch)\n",
+    "    \n",
+    "print('Test:')\n",
+    "for batch in test_iterator:\n",
+    "    print(batch)"
+   ]
   }
  ],
  "metadata": {
@@ -337,7 +442,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
